--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://andre-bandeli.github.io/UI-Design-Landing-Page-Odoton-Clean/",
   "name": "odonto",
   "version": "0.1.0",
   "private": true,
